Refactor: optimize similar get user queries
