# src/routers/user.js
@@ -57,8 +57,7 @@ routes.post(
 );
 
 routes.post('/logout', UserController.logout);
-routes.get('/:id', isLogged, UserController.getUserProfileById);
-routes.get('/:username', isLogged, UserController.getUserProfile);
+routes.get('/:idOrUsername', isLogged, UserController.getUserProfile);
 routes.put('/:id', isLogged, UserController.updateUser);
 routes.delete('/:id', isLogged, UserController.deleteUser);
 
